--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    body{
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+</style>
 <body>
+   <h1>Url Shortner</h1>
+   <% if (locals.id) { %>
+    <p>URL Generated:http://localhost:8000/url/<%= id  %></p>
+   <% } %>
     
+    <div>
+        <form  method="POST" action="/url">
+            <label>enter the url:-</label>
+            <input type="text" name="url" placeholder="https://example.com">
+            <button type="submit">Generate</button>
+        </form>
+        
+    </div>
+    <% if (locals.urls) { %>
+        <table>
+            <thead>
+                <th>S.No</th>
+                <th>Short ID</th>
+                <th>Redirect Url</th>
+                <th>Times Visited</th>
+            </thead>
+            <tbody>
+                <% urls.forEach((url,index) => { %>
+                    <tr>
+                    <td><%= index+1  %></td>
+                    <td><%= url.shortId  %></td>
+                    <td><%= url.redirectURL  %></td>
+                    <td><%= url.visitHistory.length  %></td>
+                </tr>
+                <% }) %>
+            </tbody>
+        </table>
+     
+    <% } %>
+
+ 
 </body>
 </html>
